--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-jshint": "^2.0.1",
+    "gulp-minify": "0.0.14",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
+    "jshint-stylish": "^2.2.1",
     "nodemon": "^1.11.0"
   }
 }
